# SLICER

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  InputParams.ini  Makefile  MapSim.ini  README.md  ToDoList.txt  cl.py  cosmology.cpp  cosmology.h  data.cpp  data.h  densitymaps.cpp  densitymaps.h  derivatives.py  gadget.c  gadget2io.cpp  gadget2io.h  input.py  kslicer.py  main-v5.10.4.cpp  main-v5.10.5.cpp  main-v5.10.6.cpp  main-v6.cpp  main-v7.cpp  readgadget.c  readgadget.cpp  readgadget.h  slicer-v1.cpp  slicer-v2.cpp  smr.py  testredshift_list.txt  util.cpp  util.h  util_new.cpp  util_new.h  utilities.cpp  utilities.h  (+2 more)
.github/: CONTRIBUTING
HalosPLC/: cosmology.py  geometry.py  hmf.py  hslicer.py  map.py  params.py  plot-hmf.py  reduce.py
Lens/: InputParams.py  delta-multithread.py  delta.py  halve.py  input.py  kslicer-Painless-Zoom.py  kslicer-Painless.py  kslicer-plane.py  kslicer.py  moment.py  smr.py  utils.py
SLICER/: CMakeLists.txt  cosmology.cpp  cosmology.h  data.cpp  data.h  densitymaps.cpp  densitymaps.h  gadget2io.cpp  gadget2io.h  slicer-v2.cpp  utilities.cpp  utilities.h  w0waCDM.cpp  w0waCDM.h  writeplc.cpp  writeplc.h
cmake/: FindCCFITS.cmake
coding/: main-v2.cpp  main-v3.cpp  main-v4.cpp  main-v5.1.cpp  main-v5.1.cpp~  main-v5.10.4.cpp  main-v5.10.6.cpp  main-v5.cpp  main-v5.cpp~  main-v6.cpp  main-v8.cpp  main-v9.cpp  main-v9.cpp~  main.cpp  main.cpp.DEMNUniMELITA  util.cpp  version_control.txt
discontinued/: main-v5.11.cpp  main-v7.cpp
docs/: annotated.html  classes.html  classw0waCDM-members.html  classw0waCDM.html  (+55 more)
(+93 files in other folders)
